[package]
name = "nonzero"
version = "0.2.0"
description = "Statically checked non-zero integers"
edition = "2021"
categories = ["rust-patterns"]
documentation = "https://docs.rs/nonzero/"
repository = "https://github.com/jerry73204/nonzero.git"
homepage = "https://github.com/jerry73204/nonzero"
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
num-traits = "0.2.16"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.29"
